--- a/aurora/Cargo.toml
+++ b/aurora/Cargo.toml
@@ -9,3 +9,4 @@ authors = ["TylerBloom <tylerbloom2222@gmail.com>"]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 anyhow = { version = "1.0" }
+const_format = { version = "0.2" }
