--- a/alara/Cargo.toml
+++ b/alara/Cargo.toml
@@ -10,6 +10,5 @@ authors = ["TylerBloom <tylerbloom2222@gmail.com>"]
 aurora = { path = "../aurora" }
 
 # Crates.io Deps:
-serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0" }
 anyhow = { version = "1.0" }
+tokio = { version = "1.0", features = ["full"] }
